--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,17 @@
 server:
   port: 9090
+#datasource properties
 spring:
   datasource:
-    driver: org.h2.Driver
-    password: h2db
-    url: jdbc:h2:mem:testdb
-    username: h2db
+     url : jdbc:mysql://localhost:3306/jrtp
+     username: root
+     password: root
+     driver-class-name: com.mysql.jdbc.Driver
+     dialect: org.hibernate.dialect.MySQL8Dialect
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
